overflow auto added to result display to stop calculator display from expanding on longer inputs

--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -26,7 +26,6 @@
 }
 
 .calculator-container {
-  display: flex;
   font-family: 'Inter', sans-serif;
 }
 .circle-wrap {
@@ -53,6 +52,7 @@
   border-radius: 10px;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background-color: #302a1c;
   padding-top: 20px;
   padding-bottom: 40px;
@@ -135,4 +135,24 @@ button:hover {
 #subtract {
   grid-column: 4 / 5;
   grid-row: 3 / 4;
+}
+
+@media (max-width: 375px) {
+  nav.header {
+    display: none;
+  }
+  #calculatorWrapper {
+    align-items: normal;
+  }
+  #calculatorBody {
+    max-width: 250px;
+
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .calculator-container {
+    align-items: center;
+  }
+  .button {
+  }
 }
